@@ -49,6 +49,7 @@ namespace OpenBabel
     OBMolAtomIter(OBMol *mol);
     OBMolAtomIter(OBMol &mol);
     OBMolAtomIter(const OBMolAtomIter &ai);
+    ~OBMolAtomIter() { }
 
     OBMolAtomIter& operator=(const OBMolAtomIter &ai);
     //! \return Whether the iterator can still advance (i.e., visit more atoms)
@@ -75,6 +76,7 @@ namespace OpenBabel
     OBMolAtomDFSIter(OBMol *mol, int StartIndex=1);
     OBMolAtomDFSIter(OBMol &mol, int StartIndex=1);
     OBMolAtomDFSIter(const OBMolAtomDFSIter &ai);
+    ~OBMolAtomDFSIter() { }
 
     OBMolAtomDFSIter& operator=(const OBMolAtomDFSIter &ai);
     //! \return Whether the iterator can still advance (i.e., visit more atoms)
@@ -109,6 +111,7 @@ namespace OpenBabel
     OBMolAtomBFSIter(OBMol *mol);
     OBMolAtomBFSIter(OBMol &mol);
     OBMolAtomBFSIter(const OBMolAtomBFSIter &ai);
+    ~OBMolAtomBFSIter() { }
 
     OBMolAtomBFSIter& operator=(const OBMolAtomBFSIter &ai);
     //! \return Whether the iterator can still advance (i.e., visit more atoms)
@@ -134,6 +137,7 @@ namespace OpenBabel
     OBMolBondIter(OBMol *mol);
     OBMolBondIter(OBMol &mol);
     OBMolBondIter(const OBMolBondIter &bi);
+    ~OBMolBondIter() { }
 
     OBMolBondIter& operator=(const OBMolBondIter &bi);
     //! \return Whether the iterator can still advance (i.e., visit more bonds)
@@ -159,6 +163,7 @@ namespace OpenBabel
     OBAtomAtomIter(OBAtom *atm);
     OBAtomAtomIter(OBAtom &atm);
     OBAtomAtomIter(const OBAtomAtomIter &ai);
+    ~OBAtomAtomIter() { }
 
     OBAtomAtomIter& operator=(const OBAtomAtomIter &ai);
      //! \return Whether the iterator can still advance (i.e., visit more neighbors)
@@ -184,6 +189,7 @@ namespace OpenBabel
     OBAtomBondIter(OBAtom *atm);
     OBAtomBondIter(OBAtom &atm);
     OBAtomBondIter(const OBAtomBondIter &bi);
+    ~OBAtomBondIter() { }
 
     OBAtomBondIter& operator=(const OBAtomBondIter &bi);
     //! \return Whether the iterator can still advance (i.e., visit more bonds)
@@ -209,6 +215,7 @@ namespace OpenBabel
     OBResidueIter(OBMol *mol);
     OBResidueIter(OBMol &mol);
     OBResidueIter(const OBResidueIter &ri);
+    ~OBResidueIter() { }
 
     OBResidueIter& operator=(const OBResidueIter &ri);
     //! \return Whether the iterator can still advance (i.e., visit more residues)
@@ -234,6 +241,7 @@ namespace OpenBabel
     OBResidueAtomIter(OBResidue *res);
     OBResidueAtomIter(OBResidue &res);
     OBResidueAtomIter(const OBResidueAtomIter &ri);
+    ~OBResidueAtomIter() { }
 
     OBResidueAtomIter &operator = (const OBResidueAtomIter &ri);
     //! \return Whether the iterator can still advance (i.e., visit more atoms in this residue)
@@ -260,6 +268,7 @@ namespace OpenBabel
     OBMolAngleIter(OBMol *mol);
     OBMolAngleIter(OBMol &mol);
     OBMolAngleIter(const OBMolAngleIter &ai);
+    ~OBMolAngleIter() { }
 
     OBMolAngleIter& operator=(const OBMolAngleIter &ai);
     //! \return Whether the iterator can still advance (i.e., visit more angles)
@@ -283,6 +292,7 @@ namespace OpenBabel
     OBMolTorsionIter(OBMol *mol);
     OBMolTorsionIter(OBMol &mol);
     OBMolTorsionIter(const OBMolTorsionIter &ai);
+    ~OBMolTorsionIter() { }
 
     OBMolTorsionIter& operator=(const OBMolTorsionIter &ai);
     //! \return Whether the iterator can still advance (i.e., visit more torsions)
@@ -307,6 +317,7 @@ namespace OpenBabel
     OBMolPairIter(OBMol *mol);
     OBMolPairIter(OBMol &mol);
     OBMolPairIter(const OBMolPairIter &ai);
+    ~OBMolPairIter() { }
 
     OBMolPairIter& operator=(const OBMolPairIter &ai);
     //! \return Whether the iterator can still advance (i.e., visit more 1-4 atom pairs)
@@ -331,6 +342,7 @@ namespace OpenBabel
     OBMolRingIter(OBMol *mol);
     OBMolRingIter(OBMol &mol);
     OBMolRingIter(const OBMolRingIter &ri);
+    ~OBMolRingIter() { }
 
     OBMolRingIter& operator=(const OBMolRingIter &ri);
     //! \return Whether the iterator can advance (i.e., there are more rings)
